--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -29,10 +29,11 @@ proxy:
 registry:
   # Specify the registry server, if you're not using Docker Hub
   # server: registry.digitalocean.com / ghcr.io / ...
-  username: <%= ENV["KAMAL_REGISTRY_USERNAME"] %>
+  server: localhost:5555
+  # username: <%= ENV["KAMAL_REGISTRY_USERNAME"] %>
 
   # Always use an access token rather than real password (pulled from .kamal/secrets).
-  password: '<%= ENV["KAMAL_REGISTRY_PASSWORD"] %>'
+  # password: '<%= ENV["KAMAL_REGISTRY_PASSWORD"] %>'
 
 # Configure builder setup.
 builder:
